修改主題為Icarus

--- a/source/_posts/避免多重登入送出錯誤資料.md
+++ b/source/_posts/避免多重登入送出錯誤資料.md
@@ -1,18 +1,43 @@
 ---
-title: 解決多重tab登入後，避免舊tab資料使用新Session送出資料
+title: 避免多重登入送出錯誤資料
 date: 2017-07-27 12:00:00
-tags:
-categories: C#
+tags: dotnet
+categories: Software
+thumbnail: https://images.unsplash.com/photo-1533121148758-0e29f0049e49?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max&ixid=eyJhcHBfaWQiOjF9
 ---
 
-> 解決構想來自於MVC的AntiForgeryToken作法。
-> 1. 登入時產生新的Guid，並存入Session
-> 2. 前端產生hidden欄位存入Guid
-> 3. post到後端時檢查目前Session中Guid與form post過來的Guid是否相符
+故事是這樣的...
 
-如此一來不同Tab在post資料時，若與目前Session中GUID不相符，則進行後續導頁或登出動作
+<!-- more -->
+某金融客戶站台接到客訴
+客戶都登入了兩個網頁
+(先不要問我user怎麼這麼神奇可以幹這件事)
 
-## HtmlHelper
+A帳號沒登出，B帳號又登入
+結果A帳號又在原本的頁面送出表單
+然後 Boom !!
+
+Magic...
+
+A帳號的資料寫進去B帳號了
+
+## 問題
+估計應該是user開了兩個分頁
+第一個分頁停在某個表單頁面尚未送出
+第二個頁面一開始也是用A帳號登入
+之後登出改用B帳號
+
+## 怎麼解決
+
+解決構想來自於MVC的AntiForgeryToken作法。
+ 1. 登入時產生新的Guid，並存入Session
+ 2. 前端產生hidden欄位存入token
+ 3. post到後端時檢查目前Session中token與前端post過來的token是否相符
+如此一來不同Tab在post資料時，若與目前Session中Token不相符，則進行後續導頁或登出動作
+
+## 開始實作
+
+### 前端使用HtmlHelper
 `HtmlHelper`用來在前端使用Razor語法產生Token
 
 ```cs
@@ -51,7 +76,7 @@ namespace SingleLogin.Web.Helpers
     ```
 2. View引入命名空間後使用`@Html.IsSingleLoginToken()`即可，使用方法跟AntiForgeryToken差不多
 
-## ActionFilter
+### 後端Controller加上ActionFilter
 `Filter` 用來在後端Controller加上`[IsSingleLogin]`，用來驗證前端Post過來的Guid值
 ```cs
 using System.Web.Mvc;
@@ -84,4 +109,9 @@ namespace SingleLogin.Web.ActionFilters
 ```
 
 ## 小結
-Client端就可以用`@Html.IsSingleLoginToken()`跟Controller加上 `[IsSingleLogin]`tag就可以容易的加上驗證功能
+前端就使用@Html.IsSingleLoginToken()
+後端Controller加上 `[IsSingleLogin]` Filter
+就可以簡單的加上驗證功能
+
+用AOP可以解方法的時候特別爽
+跟菜鳥時期一頁一頁處理的過去說掰掰
